corrected according to notices
